# graviton-native

./: .gitignore  CLOUD_72B.md  PAPER.md  README.md  pyproject.toml
configs/: ds_config_72b.json
docs/: OMEGA_ARCHITECTURE.md
graviton_native/: __init__.py  cli.py
graviton_native/models/: __init__.py  bitnet.py  moe.py  omega.py
graviton_native/optimization/: __init__.py  device.py
graviton_native/training/: __init__.py  disk_offload.py  trainer.py
scripts/: run_72b_cloud.sh  run_omega.py  train_bitnet.py  train_bitnet_72b.py  train_bitnet_72b_disk_offload.py  train_bitnet_code.py  train_bitnet_full.py  train_moe.py  train_omega.py
tests/: __init__.py  test_bitnet.py  test_cli.py  test_disk_offload.py  test_e2e.py  test_omega.py  test_optimization.py  test_trainer.py
